--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@react-native/babel-preset": "0.76.7",
     "@react-native/eslint-config": "^0.76.7",
     "@react-native/js-polyfills": "^0.76.7",
-    "@react-navigation/devtools": "7.0.15",
     "@react-native/metro-babel-transformer": "^0.76.7",
     "@react-native/typescript-config": "0.76.7",
     "@react-navigation/devtools": "7.0.15",
@@ -125,6 +124,7 @@
     "electrum-client": "github:BlueWallet/rn-electrum-client#1bfe3cc",
     "electrum-mnemonic": "2.0.0",
     "events": "3.3.0",
+    "glpk.js": "^4.0.2",
     "junderw-crc32c": "1.2.0",
     "lottie-react-native": "7.2.2",
     "path-browserify": "1.0.1",
